# lab-11-process

./: .travis.yml  CMakeLists.txt
include/: builder.hpp  constants.hpp
scripts/: checks.sh
sources/: builder.cpp
tests/: test.cpp
